Fix spacing of elements on page

--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ body {
   flex-direction: column;
   justify-content: center;
   gap: 64px;
-  padding: 32px;
+  padding: 64px;
 }
 
 .buttonContainer {
